<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.ecommercenav.fragment.infoShop.InfoShopFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_infoshop" />
    <fragment
        android:id="@+id/nav_alarm"
        android:name="com.example.ecommercenav.fragment.alarm.AlarmFragment"
        android:label="@string/menu_alarm"
        tools:layout="@layout/fragment_alarm" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.ecommercenav.fragment.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.ecommercenav.fragment.search.SearchFragment"
        android:label="@string/menu_seach"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_cate"
        android:name="com.example.ecommercenav.fragment.category.CategoryFragment"
        android:label="@string/menu_cate"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.ecommercenav.fragment.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>